v2 - DataAccess & Business added

--- a/MVC/appsettings.json
+++ b/MVC/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MVC-1c6acd98-80f0-4232-992e-2c3023501797;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
